--- a/galeri/galeri.html
+++ b/galeri/galeri.html
@@ -11,8 +11,11 @@
     <a href="/hakkimda.html">Hakkımda</a>
     <a href="galeri.html">Galeri</a>
     <a href="/iletisim.html">İletişim</a>
-  
-   <a href="kediler2.html"> <img src="../assets/img/3.jpg" height="650px" alt=""></a>
-    <a href="kopekler.html"><img src="../assets/img/1.jpg" height="650px" alt=""></a>
+    <a href="../projelerim.html">Projelerim</a>
+    <br>
+    <hr>
+    <p>Resimleri görmek için fotoğrafa tıklayınız.</p>
+   <a href="kediler2.html"> <img src="../assets/img/3.jpg" height="300px" alt="Kedi"></a>
+    <a href="kopekler.html"><img src="../assets/img/1.jpg" height="300px" alt="Köpek"></a>
 </body>
 </html>
