--- a/galeri/kediler2.html
+++ b/galeri/kediler2.html
@@ -6,6 +6,15 @@
     <title>Kediler</title>
 </head>
 <body>
-    <img src="../assets/img/6.jpg" alt="">
+    <h1>Kediler</h1>
+    <a href="/">Anasayfa</a>
+    <a href="/hakkimda.html">Hakkımda</a>
+    <a href="../galeri/galeri.html">Galeri</a>
+    <a href="/iletisim.html">İletişim</a>
+    <a href="projelerim.html">Projelerim</a>
+    <hr>
+    <img src="../assets/img/6.jpg" alt="Kedi Resmi 1"><br>
+    <img src="../assets/img/4.jpg" alt="Kedi Resmi 2"><br>
+    <img src="../assets/img/9.jpg" alt="Kedi Resmi 3">
 </body>
 </html>
