--- a/galeri/kopekler.html
+++ b/galeri/kopekler.html
@@ -6,7 +6,17 @@
     <title>Köpekler</title>
 </head>
 <body>
-    <img src="../assets/img/5.jpg" alt="">
+    <h1>Köpekler</h1>
+    <a href="/">Anasayfa</a>
+    <a href="/hakkimda.html">Hakkımda</a>
+    <a href="../galeri/galeri.html">Galeri</a>
+    <a href="/iletisim.html">İletişim</a>
+    <a href="projelerim.html">Projelerim</a>
+    <br>
+    <hr>
+    <img src="../assets/img/5.jpg" alt="Köpek Resmi 1"><br>
+    <img src="../assets/img/7.jpg" alt="Köpek Resmi 2"><br>
+    <img src="../assets/img/8.jpg" alt="Köpek Resmi 3">
     
 </body>
 </html>
