--- a/hakkimda.html
+++ b/hakkimda.html
@@ -11,6 +11,8 @@
     <a href="/hakkimda.html">Hakkımda</a>
     <a href="galeri/galeri.html">Galeri</a>
     <a href="/iletisim.html">İletişim</a>
+    <a href="projelerim.html">Projelerim</a>
+
     <hr>
     <!--e-posta uygulamasını teiklemek için <a href="mailto:cimebura@hotmail.com">cimebura@hotmail.com</a>-->
     <!--Telefon ie arama tetiklenmesi için <a href="tel:5417230806">0 (541)723 0806</a> -->
