--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="/hakkimda.html">Hakkımda</a>
     <a href="galeri/galeri.html">Galeri</a>
     <a href="/iletisim.html">İletişim</a>
+    <a href="projelerim.html">Projelerim</a>
     
     <hr>
     <p>Merhaba ben Mehmet 21 yaşındayım.AcunMedya Akademide öğrenim görüyorum.</p>
