--- a/galeri/kediler.html
+++ b/galeri/kediler.html
@@ -9,8 +9,10 @@
     <h1>Kediler</h1>
     <a href="/">Anasayfa</a>
     <a href="/hakkimda.html">Hakkımda</a>
-    <a href="galeri.html">Galeri</a>
+    <a href="../galeri/galeri.html">Galeri</a>
     <a href="/iletisim.html">İletişim</a>
+    <a href="projelerim.html">Projelerim</a>
+
     <hr>
     <!-- ../ bir üst klasöre taşır -->
     
