--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="galeri/galeri.html">Galeri</a>
     <a href="/iletisim.html">İletişim</a>
     <a href="projelerim.html">Projelerim</a>
+    <a href="https://mehmetiyiyazici.github.io/haber/" target="_blank" >Haber Sayfamız</a>
     
     <hr>
     <p>Merhaba ben Mehmet 21 yaşındayım.AcunMedya Akademide öğrenim görüyorum.</p>
