--- a/projelerim.html
+++ b/projelerim.html
@@ -24,13 +24,13 @@
             <th>Projelerim</th>
         </tr>
         <tr>
-           <td>Haber Sitesi</td>
+          <td><a href="https://mehmetiyiyazici.github.io/haber/" target="_blank">Haber Sitesi</a></td>
         </tr>
         <tr>
-           </a><td>Hastane Sitesi</td>
+           <td><a href="https://mehmetiyiyazici.github.io/hastane/" target="_blank">Hastane Sitesi</a></td>
         </tr>
         <tr>
-            <td>Spor Takımları Sitesi</td>
+           <td><a href="https://mehmetiyiyazici.github.io/fenerbahce/" target="_blank">Spor Takımları Sitesi</a></td>
         </tr>
         <tr>
             <td>Gezi Rehberi Sitesi</td>
