--- a/projelerim.html
+++ b/projelerim.html
@@ -33,7 +33,7 @@
            <td><a href="https://mehmetiyiyazici.github.io/fenerbahce/" target="_blank">Spor Takımları Sitesi</a></td>
         </tr>
         <tr>
-            <td>Gezi Rehberi Sitesi</td>
+            <td><a href="https://mehmetiyiyazici.github.io/gezirehberi/">Gezi Rehberi Sitesi</a></td>
         </tr>
         <tr>
             <td>Otel Sitesi</td>
