--- a/projelerim.html
+++ b/projelerim.html
@@ -36,10 +36,10 @@
             <td><a href="https://mehmetiyiyazici.github.io/gezirehberi/">Gezi Rehberi Sitesi</a></td>
         </tr>
         <tr>
-            <td>Otel Sitesi</td>
+            <td><a href="https://mehmetiyiyazici.github.io/otel/">Otel Sitesi</a></td>
         </tr>
         <tr>
-            <td>Yemek Tarifleri Sitesi</td>
+            <td><a href="https://mehmetiyiyazici.github.io/yemek/">Yemek Tarifleri Sitesi</a></td>
         </tr>
     </table>
 
